Fix profile image stretch for smaller screens

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -21,7 +21,7 @@
 
 #portrait img {
   border-radius: 25px;
-  width: 240px;
+  max-height: 240px;
 }
 /* 
 #portrait-links {
@@ -85,6 +85,10 @@
     margin: 0 90px;
   }
 
+  #portrait {
+    align-self: flex-start;
+  }
+
   .fab, .fas {
     font-size: 3.5vw;
   }
@@ -103,6 +107,10 @@
     display: flex;
     flex-direction: column;
     margin: 0 20px;
+  }
+
+  #portrait {
+    align-self: flex-start;
   }
 
   .fab, .fas {
